# land-valuation-inference

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  app.py
benchmarks/: __init__.py  latency.py
db/: README.md
db/init/: 001_schema.sql  002_seed.sql
db/queries/: select_candidates_bbox.sql
docs/: nda_scope.md
examples/: __init__.py  smoke_demo.py
inference/: __init__.py  analog_retrieval.py  distance_utils.py  feature_contracts.py  models.py  online_features.py  pairwise_features.py  pipeline.py  schemas.py
tests/: test_analog_retrieval.py  test_distance_utils.py  test_feature_contracts.py  test_features.py  test_pipeline.py
