[project]
name = "land-valuation-inference"
version = "0.1.0"
description = "Inference library for ML-based land plot valuation system"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Dmitriy Lebedinskiy"}
]
license = {text = "MIT"}
dependencies = [
    "polars>=1.0",
    "pydantic>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "lightgbm>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=inference --cov-report=term-missing"